# receipt-tools

scan-slicer/: pyproject.toml
scan-slicer/nix/: shell.nix  sources.json
scan-slicer/src/: resizer.py  slicer.py
