[tool.poetry]
name = "receipt-processor"
version = "0.1.0"
description = "A library and cli/gui/tui tools for processing recepits"
authors = ["user <email>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
Pillow = "^10.0.0"
tesseract = "^0.1.3"
PyQt6 = "^6.5.1"
setuptools = "^68.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
